--- a/index.html
+++ b/index.html
@@ -368,13 +368,17 @@
 
     </section><!-- /Resume Section -->
 
-    <!-- Portfolio Section -->
+     <!--Portfolio Section -->
     <section id="portfolio" class="portfolio section light-background">
 
-     Section Title
+     <!--Section Title-->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Projects</h2>
+        <p>Throughout my academic and professional journey,
+           I have undertaken diverse projects that showcase my
+            ability to apply technical, analytical, and creative
+             skills to real-world challenges. These projects highlight my expertise in software development,
+           problem-solving, and effective communication, reflecting my passion for innovation and delivering impactful solutions.</p>
       </div>
 
       <div class="container">
@@ -383,10 +387,10 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-product">Product</li>
-            <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li>
+            <li data-filter=".filter-app"></li>
+            <li data-filter=".filter-product"></li>
+            <li data-filter=".filter-branding"></li>
+            <li data-filter=".filter-books"></li>
           </ul>
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -437,7 +441,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div> End Portfolio Item 
+            </div> <!--End Portfolio Item--> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
@@ -449,7 +453,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div>End Portfolio Item 
+            </div><!--End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
@@ -473,7 +477,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div>End Portfolio Item 
+            </div><!--End Portfolio Item--> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
@@ -485,7 +489,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div>End Portfolio Item 
+            </div><!--End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
@@ -497,7 +501,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div>End Portfolio Item 
+            </div><!--End Portfolio Item--> 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
@@ -536,7 +540,7 @@
             </div>
 
           </div>
-          End Portfolio Container 
+        <!--End Portfolio Container -->
 
         </div>
 
