--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/4.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>A Research Project on Rationality</h4>
                   <a href="assets/img/portfolio/4.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
