--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <img src="assets/img/portfolio/4.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>A Research Project on Rationality</h4>
-                  <a href="assets/img/portfolio/4.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/4.jpg" title="A Research Project on Rationality" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="assets/img/portfolio/Final Project.pdf" title="Download Pdf" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -408,12 +408,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/5.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>News Paper</h4>
+                  <a href="assets/img/portfolio/5.jpg" title="News Paper" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/NEWSPAPER.pdf" title="Download Pdf" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
@@ -422,10 +421,9 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Branding 1</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Spotify Magazine</h4>
+                  <a href="assets/img/portfolio/6.jpg" title="Spotify Magazine" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/SPOTIFY MAGAZINE FINAL.pdf" title="Download Pdf" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
